--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,11 @@
 .env.test.local
 .env.production.local
 
+#other
+/src/Data/GroceryStoreJSON.json
+/src/reportWebVitals.js
+/src/setupTest.js
+
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
